--- a/fpw-fct.pot
+++ b/fpw-fct.pot
@@ -1,10 +1,10 @@
-# Copyright (C) {year} FPW Category Thumbnails
+# Copyright (C) 2012 FPW Category Thumbnails
 # This file is distributed under the same license as the FPW Category Thumbnails package.
 msgid ""
 msgstr ""
-"Project-Id-Version: FPW Category Thumbnails 1.4.1\n"
+"Project-Id-Version: FPW Category Thumbnails 1.4.2\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/fpw-category-thumbnails\n"
-"POT-Creation-Date: 2012-01-02 00:08:23+00:00\n"
+"POT-Creation-Date: 2012-01-03 08:03:08+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
-#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.4.1)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.4.2)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: fpw-category-thumbnails.php:87 fpw-category-thumbnails.php:88
 #: fpw-category-thumbnails.php:389 fpw-category-thumbnails.php:455
