--- a/fpw-fct.pot
+++ b/fpw-fct.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the FPW Category Thumbnails package.
 msgid ""
 msgstr ""
-"Project-Id-Version: FPW Category Thumbnails 1.5.3\n"
+"Project-Id-Version: FPW Category Thumbnails 1.5.4\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/fpw-category-thumbnails\n"
-"POT-Creation-Date: 2012-06-29 06:46:30+00:00\n"
+"POT-Creation-Date: 2012-07-08 19:47:08+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -70,7 +70,7 @@ msgstr ""
 msgid "No changes. Nothing to update."
 msgstr ""
 
-#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.5.3)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.5.4)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: classes/fpw-category-thumbnails-class.php:110
 #: classes/fpw-category-thumbnails-class.php:111
@@ -86,7 +86,9 @@ msgid "What's new in this version?"
 msgstr ""
 
 #: classes/fpw-category-thumbnails-class.php:140
-msgid "Added option to enable / disable built-in FPW Post Thumbnails"
+msgid ""
+"Fixed mapping not being applied when post/page is created/updated in user "
+"context ( eg. xmlrpc )"
 msgstr ""
 
 #: classes/fpw-category-thumbnails-class.php:166
