--- a/fpw-fct.pot
+++ b/fpw-fct.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the FPW Category Thumbnails package.
 msgid ""
 msgstr ""
-"Project-Id-Version: FPW Category Thumbnails 1.5.5\n"
+"Project-Id-Version: FPW Category Thumbnails 1.5.6\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/fpw-category-thumbnails\n"
-"POT-Creation-Date: 2012-07-11 17:50:14+00:00\n"
+"POT-Creation-Date: 2012-07-16 15:20:10+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -70,7 +70,7 @@ msgstr ""
 msgid "No changes. Nothing to update."
 msgstr ""
 
-#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.5.5)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (FPW Category Thumbnails 1.5.6)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: classes/fpw-category-thumbnails-class.php:110
 #: classes/fpw-category-thumbnails-class.php:111
@@ -319,7 +319,7 @@ msgid "Added choice of base dimension for image scaling"
 msgstr ""
 
 #: classes/fpw-post-thumbnails-class.php:192
-msgid "Removed built-in stylesheet for preview and added dynamic CSS instead"
+msgid "Removed built-in front end stylesheet and added dynamic CSS instead"
 msgstr ""
 
 #: classes/fpw-post-thumbnails-class.php:323
